libqt6c/src/libqfilesystemwatcher.hpp

#pragma once
#ifndef SRCC_LIBQFILESYSTEMWATCHER_HPP
#define SRCC_LIBQFILESYSTEMWATCHER_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QFileSystemWatcher QFileSystemWatcher;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
#endif

QFileSystemWatcher* QFileSystemWatcher_new();
QFileSystemWatcher* QFileSystemWatcher_new2(const QStringList* paths);
QFileSystemWatcher* QFileSystemWatcher_new3(QObject* parent);
QFileSystemWatcher* QFileSystemWatcher_new4(const QStringList* paths, QObject* parent);
QMetaObject* QFileSystemWatcher_MetaObject(const QFileSystemWatcher* self);
void* QFileSystemWatcher_Metacast(QFileSystemWatcher* self, const char* param1);
int QFileSystemWatcher_Metacall(QFileSystemWatcher* self, int param1, int param2, void** param3);
bool QFileSystemWatcher_AddPath(QFileSystemWatcher* self, const libqt_string file);
QStringList QFileSystemWatcher_AddPaths(QFileSystemWatcher* self, const QStringList* files);
bool QFileSystemWatcher_RemovePath(QFileSystemWatcher* self, const libqt_string file);
QStringList QFileSystemWatcher_RemovePaths(QFileSystemWatcher* self, const QStringList* files);
QStringList QFileSystemWatcher_Files(const QFileSystemWatcher* self);
QStringList QFileSystemWatcher_Directories(const QFileSystemWatcher* self);
void QFileSystemWatcher_OnMetaObject(const QFileSystemWatcher* self, intptr_t slot);
QMetaObject* QFileSystemWatcher_SuperMetaObject(const QFileSystemWatcher* self);
void QFileSystemWatcher_OnMetacast(QFileSystemWatcher* self, intptr_t slot);
void* QFileSystemWatcher_SuperMetacast(QFileSystemWatcher* self, const char* param1);
void QFileSystemWatcher_OnMetacall(QFileSystemWatcher* self, intptr_t slot);
int QFileSystemWatcher_SuperMetacall(QFileSystemWatcher* self, int param1, int param2, void** param3);
bool QFileSystemWatcher_Event(QFileSystemWatcher* self, QEvent* event);
void QFileSystemWatcher_OnEvent(QFileSystemWatcher* self, intptr_t slot);
bool QFileSystemWatcher_SuperEvent(QFileSystemWatcher* self, QEvent* event);
bool QFileSystemWatcher_EventFilter(QFileSystemWatcher* self, QObject* watched, QEvent* event);
void QFileSystemWatcher_OnEventFilter(QFileSystemWatcher* self, intptr_t slot);
bool QFileSystemWatcher_SuperEventFilter(QFileSystemWatcher* self, QObject* watched, QEvent* event);
void QFileSystemWatcher_TimerEvent(QFileSystemWatcher* self, QTimerEvent* event);
void QFileSystemWatcher_OnTimerEvent(QFileSystemWatcher* self, intptr_t slot);
void QFileSystemWatcher_SuperTimerEvent(QFileSystemWatcher* self, QTimerEvent* event);
void QFileSystemWatcher_ChildEvent(QFileSystemWatcher* self, QChildEvent* event);
void QFileSystemWatcher_OnChildEvent(QFileSystemWatcher* self, intptr_t slot);
void QFileSystemWatcher_SuperChildEvent(QFileSystemWatcher* self, QChildEvent* event);
void QFileSystemWatcher_CustomEvent(QFileSystemWatcher* self, QEvent* event);
void QFileSystemWatcher_OnCustomEvent(QFileSystemWatcher* self, intptr_t slot);
void QFileSystemWatcher_SuperCustomEvent(QFileSystemWatcher* self, QEvent* event);
void QFileSystemWatcher_ConnectNotify(QFileSystemWatcher* self, const QMetaMethod* signal);
void QFileSystemWatcher_OnConnectNotify(QFileSystemWatcher* self, intptr_t slot);
void QFileSystemWatcher_SuperConnectNotify(QFileSystemWatcher* self, const QMetaMethod* signal);
void QFileSystemWatcher_DisconnectNotify(QFileSystemWatcher* self, const QMetaMethod* signal);
void QFileSystemWatcher_OnDisconnectNotify(QFileSystemWatcher* self, intptr_t slot);
void QFileSystemWatcher_SuperDisconnectNotify(QFileSystemWatcher* self, const QMetaMethod* signal);
QObject* QFileSystemWatcher_Sender(const QFileSystemWatcher* self);
void QFileSystemWatcher_OnSender(const QFileSystemWatcher* self, intptr_t slot);
QObject* QFileSystemWatcher_SuperSender(const QFileSystemWatcher* self);
int QFileSystemWatcher_SenderSignalIndex(const QFileSystemWatcher* self);
void QFileSystemWatcher_OnSenderSignalIndex(const QFileSystemWatcher* self, intptr_t slot);
int QFileSystemWatcher_SuperSenderSignalIndex(const QFileSystemWatcher* self);
int QFileSystemWatcher_Receivers(const QFileSystemWatcher* self, const char* signal);
void QFileSystemWatcher_OnReceivers(const QFileSystemWatcher* self, intptr_t slot);
int QFileSystemWatcher_SuperReceivers(const QFileSystemWatcher* self, const char* signal);
bool QFileSystemWatcher_IsSignalConnected(const QFileSystemWatcher* self, const QMetaMethod* signal);
void QFileSystemWatcher_OnIsSignalConnected(const QFileSystemWatcher* self, intptr_t slot);
bool QFileSystemWatcher_SuperIsSignalConnected(const QFileSystemWatcher* self, const QMetaMethod* signal);
void QFileSystemWatcher_Connect_FileChanged(QFileSystemWatcher* self, intptr_t slot);
void QFileSystemWatcher_Connect_DirectoryChanged(QFileSystemWatcher* self, intptr_t slot);
void QFileSystemWatcher_Delete(QFileSystemWatcher* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif